--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -24,8 +24,8 @@ server {
     http2 on;
     server_name s3.localhost s3.openschema.ai;
 
-    ssl_certificate     /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    ssl_certificate     /etc/nginx/certs/s3.openschema.ai/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/s3.openschema.ai/privkey.pem;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:10m;
     ssl_protocols TLSv1.3 TLSv1.2;
@@ -58,8 +58,8 @@ server {
     http2 on;
     server_name minio.localhost minio.openschema.ai;
 
-    ssl_certificate     /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    ssl_certificate     /etc/nginx/certs/minio.openschema.ai/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/minio.openschema.ai/privkey.pem;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:10m;
     ssl_protocols TLSv1.3 TLSv1.2;
