--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     build:
       context: ./nginx
       args:
-        HOSTNAME: s3.openschema.ai
+        S3_HOSTNAME: s3.openschema.ai
+        MINIO_HOSTNAME: minio.openschema.ai
     ports:
       - 80:80
       - 443:443
