--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,6 +6,9 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - ./nginx/certs:/etc/nginx/certs/s3.openschema.ai:ro
+      - ./nginx/certs:/etc/nginx/certs/minio.openschema.ai:ro
     depends_on:
       s3:
         condition: service_healthy
