--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - /etc/letsencrypt/live/s3.openschema.ai:/etc/nginx/certs/s3.openschema.ai:ro
+      - /etc/letsencrypt/live/minio.openschema.ai:/etc/nginx/certs/minio.openschema.ai:ro
     depends_on:
       s3:
         condition: service_healthy
